# serial_motor

./: .gitmodules  CMakeLists.txt  README.md  package.xml
demo/: CMakeLists.txt  motor.cpp
include/serial_motor/: motor.h  motor.hpp
include/serial_motor/RMDS/: RMDS.h
include/serial_motor/types/: general_motor.hpp  rmd.hpp
serial_motor/: CMakeLists.txt  commander.hpp  motor.cpp
serial_motor/rmd/: CMakeLists.txt  rmd.cpp  rmd_cmd.hpp  rmd_impl.cpp  rmd_impl.hpp
src/: RMD.cpp
