add_subdirectory(rmd)

add_library(${PROJECT_NAME} INTERFACE)
add_dependencies(${PROJECT_NAME} rmd)
target_link_libraries(${PROJECT_NAME} INTERFACE rmd)

install(
  TARGETS ${PROJECT_NAME}
  EXPORT ${PROJECT_NAME}-config
  RUNTIME DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
)