add_subdirectory(rmd)

add_library(${PROJECT_NAME} motor.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE rmd)
target_include_directories(${PROJECT_NAME}
  PRIVATE ${PRIVATE_INCLUDE_DIR}
  PUBLIC  $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

install(
  TARGETS ${PROJECT_NAME}
  EXPORT ${PROJECT_NAME}-config
  RUNTIME DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
  LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
  ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}/${PROJECT_NAME}
)